modify various components

--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#212529" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
 
-    <link rel="icon" href="%PUBLIC_URL%/still-cat.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/still-cat.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>서버 개발자, 박진겸</title>
   </head>
-  <body>
+
+  <body class="pt-5">
     <div id="root"></div>
   </body>
+
 </html>
