[feat] change profile

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6463692283021206" crossorigin="anonymous"></script>
+
     <title>서버 개발자, 박진겸</title>
   </head>
 
